--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -4,6 +4,9 @@
 @tailwind utilities;
 
 /* for all */
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Inter", sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue";
