--- a/app/components/navtop.css
+++ b/app/components/navtop.css
@@ -39,7 +39,7 @@ nav .active {
 }
 .line {
   fill: none;
-  stroke: green;
+  stroke: black;
   stroke-width: 6;
   transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
     stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
