--- a/app/components/slider/carousel.css
+++ b/app/components/slider/carousel.css
@@ -26,15 +26,15 @@
   /* margin: 0 2rem; */
   font-size: 4rem;
   font-weight: 600;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   /* height: var(--slide-height); */
   height: 80dvh;
 }
 .embla-thumbs {
-  --thumbs-slide-spacing: 0.8rem;
-  --thumbs-slide-height: 6rem;
+  /* --thumbs-slide-spacing: 0.8rem;
+  --thumbs-slide-height: 6rem; */
   /* margin-top: var(--thumbs-slide-spacing); */
 }
 .embla-thumbs__viewport {
@@ -43,12 +43,12 @@
 }
 .embla-thumbs__container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
+  gap: 20px;
   /* margin-left: calc(var(--thumbs-slide-spacing) * -1); */
-  width: 50rem;
-  margin: auto;
+  width: fit-content;
+  /* margin: auto; */
 }
 .embla-thumbs__slide {
   flex: 0 0 22%;
@@ -85,4 +85,15 @@
 }
 .embla-thumbs__slide--selected .embla-thumbs__slide__number {
   color: var(--text-body);
+}
+@media (min-width: 375px) and (max-width: 420px) {
+  .embla-thumbs__viewport {
+    display: none;
+  }
+  /* .btns-carousel{
+    left: 14rem;
+  } */
+  .embla__container{
+   height: 35dvh;
+  }
 }
