--- a/app/components/slider/carousel.css
+++ b/app/components/slider/carousel.css
@@ -31,7 +31,7 @@
   align-items: center;
   justify-content: center; */
   /* height: var(--slide-height); */
-  height: 80dvh;
+  height: 100%;
 }
 /* .embla-thumbs {
   --thumbs-slide-spacing: 0.8rem;
