--- a/app/components/subscribe/subscribe.css
+++ b/app/components/subscribe/subscribe.css
@@ -46,7 +46,7 @@
     /* height: 50px; */
     border: 2px solid transparent;
     outline: transparent;
-    border-bottom: 3px solid #ffffff;
+    /* border-bottom: 3px solid #ffffff; */
     caret-color: #3f3f3f;
     /* background-color: #bdadad; */
     padding: 5px 10px;
