--- a/app/components/meet-author/meet-author.css
+++ b/app/components/meet-author/meet-author.css
@@ -6,7 +6,8 @@
     background-position: center center;
     margin: 10px;
     object-fit: cover;
-    background-blend-mode: difference;
+    /* background-blend-mode: difference; */
+    background-size: 100% 100%;
     }
     
 }
