--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -11,10 +11,23 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: "Inter", sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue";
+  font-family:
+    "Inter",
+    sans-serif,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue";
 }
-
+.font-k2D {
+  font-family: "K2D", sans-serif;
+}
 /* dark theme */
 :root[class~="dark"] {
   background-color: rgba(0, 0, 0, 0.411);
