--- a/app/components/AdminNav/menubtn.css
+++ b/app/components/AdminNav/menubtn.css
@@ -7,7 +7,7 @@
 }
 .line {
   fill: none;
-  stroke: black;
+  stroke: rgb(7, 77, 73);
   stroke-width: 6;
   transition:
     stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -49,12 +49,8 @@
 
 /* side nav */
 
-.sideNav {
-  display: flex;
-}
-
 aside {
-  background-color: #c3badd;
+  background-color: #ccc6c6;
   /* background-color: #6b5d96; */
   width: 20rem;
   height: 100vh;
