--- a/app/components/feature-article/featured-article.css
+++ b/app/components/feature-article/featured-article.css
@@ -1,5 +1,5 @@
 .fa-text {
-  background: url("/public/fontbg/1.jpg");
+  background: url("fontbg/1.jpg");
   color: transparent;
   background-clip: text;
   background-position: center center;
