--- a/app/components/navtop.css
+++ b/app/components/navtop.css
@@ -1,35 +1,3 @@
-/* nav {
-  position: relative;
-  display: flex;
-  cursor: pointer;
-}
-nav .link {
-  position: relative;
-  padding: 5px 10px;
-  margin: 0px 20px;
-  font-size: 1rem;
-  text-decoration: none;
-}
-
-nav .marker {
-  left: 0;
-  position: absolute;
-  height: 4px;
-  width: 0;
-  background: green;
-  bottom: -8px;
-  border-radius: 4px;
-  transition: 0.3s;
-}
-nav .active {
-  background-color: green;
-  color: white;
-  border-radius: 5px;
-  transition: all 0.3s ease-in-out;
-} */
-
-/* togglemenu */
-
 .menu {
   background-color: transparent;
   border: none;
@@ -41,7 +9,8 @@ nav .active {
   fill: none;
   stroke: black;
   stroke-width: 6;
-  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition:
+    stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
     stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 :root[class~="dark"] {
@@ -79,11 +48,6 @@ nav .active {
 }
 
 /* side nav */
-
-.sideNav {
-  display: flex;
-}
-
 aside {
   background-color: #c3badd;
   /* background-color: #6b5d96; */
