--- a/app/components/poststable/customcell.css
+++ b/app/components/poststable/customcell.css
@@ -2,7 +2,7 @@ input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
   /* height: 1em;
     width: 1em;
-    background: url("/public/searchboxcross/cross.svg") no-repeat 50% 50%;
+    background: url("searchboxcross/cross.svg") no-repeat 50% 50%;
     border-radius: 0;
     background-size: contain;
     opacity: 0;
